--- a/assets/styles.css
+++ b/assets/styles.css
@@ -18,6 +18,7 @@ main {
     position: relative;
     color: white;   
     background-image: url(./spectrum.jpg);
+    background-size: cover;
     margin-top: 15px;
     margin-right: 0px;
     padding-right: 0px;
@@ -103,5 +104,9 @@ footer {
     padding-top: 0px;
     padding-right: 10px;
     padding-left: 10px;
+}
+.uv {
+font-weight: bolder;
+text-shadow: 0px 0px 5px white;
 }
 
