--- a/assets/styles.css
+++ b/assets/styles.css
@@ -23,13 +23,13 @@ main {
     color: white;   
     background-size: cover;
     margin-top: 15px;
-    margin-right: 0px;
+    margin-right: 0px !important;
     padding-right: 0px;
-    margin-left: 15px;
     top: 0px;
     box-shadow: 0px 5px 20px 15px rgba(0, 0, 0, 0.8);
     text-shadow: 5px 5px 5px black;
     z-index: 2;
+  
 
 }
 
@@ -51,6 +51,10 @@ main {
 
 .searchBtn {
     background-color: rgb(255, 255, 255);
+    box-shadow: 5px 5px 15px 5px black;
+}
+
+#input {
     box-shadow: 5px 5px 15px 5px black;
 }
 .history {
@@ -122,5 +126,12 @@ text-shadow: 0px 0px 5px white;
     text-align: center;
     border: 0px;
 }
+.click {
+    margin-top:  10px;
 
+    border-bottom-style: groove;
+    border-bottom: rgba(0, 0, 0, 0.8);
+    border-bottom-width: thin;
+
+}
 
